--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ language: generic
 deploy:
   provider: elasticbeanstalk
   region: "ap-south-1"
-  app: "Docker"
-  env: "Docker-env"
+  app: "Docker-React"
+  env: "Docker-React-env"
   bucket_name: "elasticbeanstalk-ap-south-1-579558106006"
-  bucket_path: "Docker"
+  bucket_path: "Docker-React"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
